--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,8 @@
 @import url('https://fonts.googleapis.com/css?family=Poppins:400,500,700');
 
+.body{
+    position: relative;
+  }
 html,body{
 	height: 100%;
     width: 100%;
@@ -21,7 +24,7 @@ html,body{
   }
 
   .carousel-caption h1{
-  	font-size: 500%;
+  	font-size: 400%;
   	text-transform: uppercase;
   	text-shadow: 1px 1px 10px #000;
  }
